appId: com.optioeducation.optio
name: "Parent: Masquerade as Child"
tags:
  - parent
---
- runFlow: ../auth/login-as-parent.yaml
- tapOn:
    text: "Profile"
- assertVisible:
    text: "Profile"
    timeout: 10000
- tapOn:
    text: "Family Dashboard"
- assertVisible:
    text: "Family Dashboard"
    timeout: 10000
